<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oviesbackground"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_background2">

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_background"
        android:src="@drawable/tmdbq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        app:hintEnabled="false"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:hint="@string/username"
            android:paddingStart="6dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:passwordToggleEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:hint="@string/password"
            android:paddingStart="6dp"
            android:background="@drawable/shape"
            android:textSize="18sp"
            android:inputType="textPassword"
            app:hintEnabled="false"
            android:paddingEnd="20dp"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sing_in"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_background"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sing_in"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sing_in" />

    <TextView
        android:id="@+id/sing_up"
        android:layout_width="wrap_content"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:maxWidth="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="sans-serif-condensed"
        android:maxHeight="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/green"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/sing_in" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_background"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/continuee"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sing_up" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:indeterminateTint="@color/green"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>