<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.accountTmdb.other.FragmentContact">

    <TextView
        android:id="@+id/top_text_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/shape_edges4"
        android:gravity="center"
        android:text="@string/contact"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/info_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="20dp"
                android:text="@string/about_me"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/connection"
                android:textColor="#BD8E1F"
                android:textSize="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_textview" />


            <ImageButton
                android:id="@+id/telegram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/telegram"
                app:layout_constraintEnd_toStartOf="@id/instagram"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/connection" />

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/instagram"
                app:layout_constraintEnd_toStartOf="@id/linkedin"
                app:layout_constraintStart_toEndOf="@id/telegram"
                app:layout_constraintTop_toBottomOf="@id/connection" />

            <ImageButton
                android:id="@+id/linkedin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/linkedin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/instagram"
                app:layout_constraintTop_toBottomOf="@id/connection" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>