<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/shape_edges4"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Actor Name" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_movie_image"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/movie_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="#CFCFCF" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/actor_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_movie_image"
                app:layout_constraintTop_toTopOf="@id/card_movie_image"
                tools:text="Chris Evans" />

            <TextView
                android:layout_marginTop="70dp"
                android:id="@+id/known_for_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/known_for"
                android:paddingEnd="10dp"
                android:visibility="gone"
                android:textColor="#C5B9B9"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/actor_name" />

            <TextView
                android:id="@+id/known_for"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/known_for_text"
                tools:text="Acting" />

            <TextView
                android:id="@+id/birthplace_text"
                android:text="@string/birthplace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:visibility="gone"
                android:textColor="#C5B9B9"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/known_for" />

            <TextView
                android:id="@+id/birthplace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/birthplace_text"
                tools:text="Washington" />

            <TextView
                android:id="@+id/date_birth_text"
                android:text="@string/production_companies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:visibility="gone"
                android:textColor="#C5B9B9"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/birthplace" />

            <TextView
                android:id="@+id/date_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/date_birth_text"
                tools:text="11 September" />

            <TextView
                android:text="@string/biography"
                android:id="@+id/movie_overview_text"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:textColor="@color/green"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@id/movie_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/card_movie_image" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/similar_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/card_movie_image"
                app:layout_constraintTop_toBottomOf="@id/movie_overview_text" />

            <TextView
                android:id="@+id/similar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="12dp"
                android:visibility="invisible"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/similar_movies" />

            <LinearLayout
                android:id="@+id/all_button"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/movie_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/similar_movies">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:text="@string/see_all"
                    android:textColor="@color/green" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_round_navigate_next_24" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/all_button"
                tools:itemCount="5"
                tools:listitem="@layout/item_now_playing" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/green"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>